<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterActivity">

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/lavender_border"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ng_k"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/lavender_border"
                    android:drawableStart="@drawable/ic_baseline_person_pin_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/grey" />


                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ng_k"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_margin="10dp"
                    android:alpha="0.5"
                    android:background="@color/yellow" />

                <TextView
                    android:id="@+id/loginRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/ng_nh_p"
                    android:textColor="@color/lavender"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>