<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".fragment.LoginActivity">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:gravity="center"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="24dp"
                        android:background="@drawable/lavender_border">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ng_nh_p"
                            android:textSize="36sp"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>


                        <EditText
                            android:id="@+id/login_username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/lavender_border"
                            android:layout_marginTop="40dp"
                            android:padding="8dp"
                            android:hint="@string/username"
                            android:maxLines="1"
                            android:drawableStart="@drawable/ic_baseline_person_pin_24"
                            android:drawablePadding="8dp"
                            android:textColor="@color/grey"/>

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/lavender_border"
                            android:layout_marginTop="20dp"
                            android:padding="8dp"
                            android:hint="@string/password"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:drawableLeft="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="8dp"
                            android:textColor="@color/grey"/>

                        <Button
                            android:id="@+id/login_button"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:text="@string/ng_nh_p"
                            android:textSize="18sp"
                            android:layout_marginTop="30dp"
                            app:cornerRadius = "20dp"/>
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_margin="10dp"
                            android:alpha="0.5"
                            android:background="@color/yellow" />
                        <TextView
                            android:id="@+id/signupRedirectText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ng_k"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:textColor="@color/lavender"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/navbar_layout"
            app:menu="@menu/navigation_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>